# claude-code-flowed

./: .gitignore  CLAUDE.md  GRAPHITI_EXAMPLES.md  GRAPHITI_INTEGRATION.md  GRAPHITI_SETUP.md  INTEGRATION_COMPLETE.md  README.md  ZEN_MEMORY_WRAPPER.md  complete-graphiti-setup.sh  pyproject.toml  setup-graphiti.sh  test-graphiti-integration.py
.claude/: project_config.json  settings.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/: accessibility-champion.md  analytics-engineer.md  claude-flow-orchestrator.md  code-search-specialist.md  compliance-officer.md  computer-vision-engineer.md  concurrency-debugger.md  context7-researcher.md  cost-optimizer.md  data-quality-guardian.md  database-migrator.md  etl-pipeline-engineer.md  filesystem-specialist.md  firecrawl-scraper.md  framework-upgrader.md  github-automator.md  golang-microservices.md  ide-integrator.md  kubernetes-operator.md  llm-integration-specialist.md  magicui-designer.md  memory-leak-detective.md  mobile-cross-platform.md  monolith-decomposer.md  network-troubleshooter.md  nodejs-fullstack.md  penetration-tester.md  playwright-tester.md  product-engineer.md  react-specialist.md  rust-systems-programmer.md  ruv-swarm-coordinator.md  serena-coder.md  shadcn-ui-specialist.md  sre-engineer.md  tavily-researcher.md  technical-writer.md  terraform-architect.md  zen-analyst.md  zen_specialist.md
.claude/hooks/: benchmark_ml_optimizer.py  example_risk_assessment.py  graphiti-integration.py  hook_config.json  neural_pattern_training.py  performance_benchmark.py  performance_dashboard.py  performance_monitor.py  post_tool_config.json  post_tool_use.py  post_tool_use.py.backup  post_tool_use_optimized.py  pre_compact.py  pre_tool_config.json  pre_tool_use.py  prompt-submit-zen.py  session-start-memory.py  session-start-zen.py  session_end.py  session_restore.py  session_start.py  stop.py  test_process_manager.py  ultra_fast_post_tool_use.py  user_prompt_submit.py  zen-graphiti-bridge.py  zen-memory-wrapper.py
.claude/hooks/.session/: continuity.json
.claude/hooks/demos/: README.md  demo_ml_optimizer.py  demo_zen_integration.py  zen_copilot_neural_commands.py  zen_copilot_simple_test.py
.claude/hooks/doc/: ANTI_PATTERN_PREVENTION.md  CLAUDE_FLOW_INTEGRATION.md  CLAUDE_FLOW_INTEGRATION_PLAN.md  CLAUDE_FLOW_INTEGRATION_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_QUALITY_REPORT.md  CONTEXT_INTELLIGENCE_ENGINE_IMPLEMENTATION.md  HOOK_ENHANCEMENTS.md  HOOK_OPTIMIZATION_COMPLETE.md  MCP_ORCHESTRATION_ENHANCEMENT.md  MEMORY_INTEGRATION.md  ML_OPTIMIZATION_REPORT.md  OPTIMIZATION_GUIDE.md  ORPHAN_FILES_ANALYSIS.md  PATH_MANAGEMENT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_2_COMPLETION.md  RUFF_CONFIG_GUIDE.md  TESTING_FRAMEWORK.md  ZEN_ADAPTIVE_LEARNING_INTEGRATION_COMPLETE.md  ZEN_CONSULTANT_IMPLEMENTATION.md  ZEN_COPILOT_PHASE2_IMPLEMENTATION.md  ZEN_COPILOT_PROJECT_PLAN.md  ZEN_PHASE3_MULTI_MODEL_CONSENSUS.md
.claude/hooks/memory/: memory-store.json
.claude/hooks/modules/: README.md  __init__.py
.claude/hooks/tests/: PERFORMANCE_BENCHMARKING_SUMMARY.md  performance_benchmark_suite.py  quick_performance_results.json  quick_performance_validation.py  run_integration_tests.py  test_analyzer_component_integration.py  test_analyzer_unit_tests.py  test_ci_integration.py  test_context_intelligence_engine.py  test_framework_architecture.py  test_functionality_framework.py  test_integration_framework.py  test_load_framework.py  test_master_suite.py  test_memory_namespace.py  test_object_pool_integration.py  test_performance_benchmarks.py  test_performance_framework.py  test_posttool_integration.py  test_posttool_pipeline_integration.py  (+8 more)
.claude/scripts/: memory_cli_wrapper.sh
analysis-reports/: bottleneck-1754093550201.json  performance-1754093575106.json  performance-1754094919247.json
memory/: memory-store.json
memory/agents/: README.md
memory/sessions/: README.md
(+186 files in other folders)
